--- a/html/sign-up-page.html
+++ b/html/sign-up-page.html
@@ -6,7 +6,6 @@
   <title>FitnessPal - Sign Up</title>
   <link rel="shortcut icon" href="/assets/logo-pt2.png" type="image/x-icon" />
   <style>
-    /* Your existing styles here */
     * {
       box-sizing: border-box;
     }
@@ -67,10 +66,12 @@
     .show-password input {
       margin-right: 8px;
     }
-    .signup-btn, #google-signin-btn {
+    .signup-btn {
       width: 100%;
       padding: 12px;
       font-size: 16px;
+      background: #F15223;
+      color: white;
       border: none;
       border-radius: 8px;
       cursor: pointer;
@@ -78,23 +79,14 @@
       transition: background 0.3s ease;
       margin-top: 10px;
     }
-    .signup-btn {
-      background: #F15223;
-      color: white;
-    }
     .signup-btn:hover {
       background-color: #e94d1e;
     }
-    #google-signin-btn {
-      background: #4285F4;
-      color: white;
+    /* Google Sign-In container spacing */
+    #google-signin {
+      margin-top: 10px;
       display: flex;
       justify-content: center;
-      align-items: center;
-      gap: 10px;
-    }
-    #google-signin-btn:hover {
-      background: #357ae8;
     }
     .footer-text {
       margin-top: 15px;
@@ -110,9 +102,12 @@
     }
   </style>
 
-  <!-- Firebase SDKs -->
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.23.0/firebase-auth-compat.js"></script>
+
+  <!-- Google Identity Services -->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body>
 
@@ -140,30 +135,26 @@
       <button type="submit" class="signup-btn">Sign Up</button>
     </form>
 
-    <button id="google-signin-btn" aria-label="Sign in with Google">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" alt="Google Logo" style="height:18px;"/>
-      Sign in with Google
-    </button>
+    <!-- Google Sign-In button placeholder -->
+    <div id="google-signin"></div>
 
     <p class="footer-text">
-      Already have an account? <a href="log-in-page.html">Log in</a>
+      Already have an account? <a href="log-in-page.html">Log In</a>
     </p>
   </div>
 
   <script>
-    // Firebase configuration - Replace with your own config from Firebase Console
-  const firebaseConfig = {
-  apiKey: "AIzaSyAKsNqr-UAkwGh2H6uD_ZXfwjwCsinB6bg",
-  authDomain: "fitnesspal-3c566.firebaseapp.com",
-  projectId: "fitnesspal-3c566",
-  storageBucket: "fitnesspal-3c566.firebasestorage.app",
-  messagingSenderId: "860568935458",
-  appId: "1:860568935458:web:1f695b4693270d5869be7b",
-  measurementId: "G-DE14S51W80"
-};
+    // Your Firebase config - replace if needed
+    const firebaseConfig = {
+      apiKey: "AIzaSyAKsNqr-UAkwGh2H6uD_ZXfwjwCsinB6bg",
+      authDomain: "fitnesspal-3c566.firebaseapp.com",
+      projectId: "fitnesspal-3c566",
+      storageBucket: "fitnesspal-3c566.firebasestorage.app",
+      messagingSenderId: "860568935458",
+      appId: "1:860568935458:web:1f695b4693270d5869be7b",
+      measurementId: "G-DE14S51W80"
+    };
 
-
-    // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
 
@@ -173,38 +164,63 @@
       passField.type = this.checked ? 'text' : 'password';
     });
 
-    // Email/password sign up
+    // Email/password signup handler
     document.getElementById('signup-form').addEventListener('submit', async (e) => {
       e.preventDefault();
 
-      const email = document.getElementById('email').value;
+      const username = document.getElementById('username').value.trim();
+      const email = document.getElementById('email').value.trim();
       const password = document.getElementById('password').value;
-      const username = document.getElementById('username').value;
 
       try {
         const userCredential = await auth.createUserWithEmailAndPassword(email, password);
-        // Update profile with username
         await userCredential.user.updateProfile({ displayName: username });
-
         alert(`Account created! Welcome, ${username}`);
-        // Redirect or update UI accordingly here
+        // TODO: redirect to home page or update UI
       } catch (error) {
         alert(`Error: ${error.message}`);
       }
     });
 
-    // Google Sign-In
-    document.getElementById('google-signin-btn').addEventListener('click', async () => {
-      const provider = new firebase.auth.GoogleAuthProvider();
-      try {
-        const result = await auth.signInWithPopup(provider);
-        const user = result.user;
-        alert(`Logged in as ${user.displayName} (${user.email})`);
-        // Redirect or update UI accordingly here
-      } catch (error) {
-        alert(`Google sign-in failed: ${error.message}`);
-      }
-    });
+    // Google Sign-In callback for Google Identity Services
+    function handleCredentialResponse(response) {
+      const id_token = response.credential;
+      // Note: Usually you’d verify this token on your backend for security.
+      // For demo, decode and extract info client-side:
+
+      const userObject = JSON.parse(atob(id_token.split('.')[1]));
+      const email = userObject.email;
+      const username = userObject.name || email.split('@')[0];
+
+      // Sign in or create Firebase user with Google credential
+      const credential = firebase.auth.GoogleAuthProvider.credential(id_token);
+
+      auth.signInWithCredential(credential)
+        .then(() => {
+          alert(`Signed in as ${username} (${email})`);
+          // TODO: redirect to home page or update UI
+        })
+        .catch(error => {
+          alert(`Google sign-in failed: ${error.message}`);
+        });
+    }
+
+    window.onload = function () {
+      google.accounts.id.initialize({
+        client_id: '899373532299-dno9k1v6u83mn2ngmkh0dsgoc64g7vpg.apps.googleusercontent.com',
+        callback: handleCredentialResponse,
+        ux_mode: 'popup'  // popup so no redirect, optional
+      });
+
+      google.accounts.id.renderButton(
+        document.getElementById('google-signin'),
+        { theme: "outline", size: "large" }
+      );
+
+      // Uncomment to show Google One-Tap prompt automatically:
+      // google.accounts.id.prompt();
+    };
   </script>
+
 </body>
 </html>
